# hasty

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: continuous_integration.yaml  publish.yaml
benches/: bench_gemm.rs
hasty_blas/: Cargo.toml  build.rs
hasty_blas/hasty_blas_c/cmake/: blas_config.cmake
hasty_blas/hasty_blas_c/include/: hasty_blas_c.h
hasty_blas/hasty_blas_c/include/config/: accelerate.h  cblas.h
hasty_blas/hasty_blas_c/include/level3/: gemm.h
hasty_blas/hasty_blas_c/src/: hasty_blas_c.c
hasty_blas/hasty_blas_c/src/level3/: gemm.c
hasty_blas/src/: lib.rs
hasty_blas_c/: CMakeLists.txt
hasty_blas_c/cmake/: blas_config.cmake
hasty_blas_c/include/: hasty_blas_c.h
hasty_blas_c/include/config/: openblas.h
hasty_blas_c/include/level2/: gemv.h
hasty_blas_c/src/: hasty_blas_c.c
hasty_blas_c/src/level2/: gemv.c
hasty_impl/: CMakeLists.txt
hasty_impl/cmake/: blas_config.cmake
hasty_impl/include/: hasty_blas.h  hasty_impl.h  hasty_opencl.h
hasty_impl/include/helper/: define_blas.h  define_opencl.h
hasty_impl/include/level2/: gemv.h
hasty_impl/include/level3/: gemm.h
hasty_impl/include/ocl/: opencl_errors.hpp  opencl_global.hpp  opencl_memory.hpp  opencl_memory_impl.h
hasty_impl/include/opencl/: opencl_configure.h  opencl_error_types.h  opencl_errors.hpp  opencl_global.hpp  opencl_kernel.hpp  opencl_kernel_impl.h  opencl_memory.hpp  opencl_memory_impl.h
hasty_impl/src/: hasty_blas.c
hasty_impl/src/level2/: gemv.c
hasty_impl/src/level3/: gemm.c
hasty_impl/src/opencl/: errors.cpp  opencl_configure.cpp  opencl_errors.cpp  opencl_global.cpp  opencl_kernel.cpp  opencl_memory.cpp
src/: blas.rs  doc_header.html  errors.rs  lib.rs  opencl.rs
