[package]
name = "hasty"
version = "0.1.5"
authors = ["Toby Davis"]
description = "A Rust interface to system BLAS libraries for fast linear algebra operations"
edition = "2021"
readme = "README.md"
repository = "https://github.com/Pencilcaseman/hasty"
license = "MIT"
keywords = ["blas", "linear-algebra", "matrix", "vector"]

[features]
# prefer_openblas = []
# prefer_accelerate = []
# prefer_mkl = []

build_openblas = []
prebuilt_openblas = []

generic = []    # Generic reference implementation
acml = []       # AMD Core Math Library
accelerate = [] # Apple Accelerate
arm = []        # ARM Performance Libraries
atlas = []      # ATLAS (Automatically Tuned Linear Algebra Software)
blis = []       # BLIS/Flame Framework
openblas = []   # OpenBLAS
mkl = []        # Intel MKL

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
num-traits = "0.2"

[build-dependencies]
bindgen = "0.69"
cmake = "0.1"

[[bench]]
name = "bench_gemm"
harness = false
