[package]
name = "hasty"
version = "0.2.5"
authors = ["Toby Davis"]
description = "A Rust interface to system BLAS libraries for fast linear algebra operations"
edition = "2021"
readme = "README.md"
repository = "https://github.com/Pencilcaseman/hasty"
license = "MIT"
keywords = ["blas", "linear-algebra", "matrix", "vector"]

[features]
default = []

blas = []
opencl = []
cuda = []

build_openblas = []
prebuilt_openblas = []

blas_acml = ["blas"]       # AMD Core Math Library
blas_accelerate = ["blas"] # Apple Accelerate
blas_arm = ["blas"]        # ARM Performance Libraries
blas_atlas = ["blas"]      # ATLAS (Automatically Tuned Linear Algebra Software)
blas_blis = ["blas"]       # BLIS/Flame Framework
blas_openblas = ["blas"]   # OpenBLAS
blas_mkl = ["blas"]        # Intel MKL

blas_clblast = ["blas", "opencl"] # CLBlast (https://github.com/CNugteren/CLBlast)
blas_cublas = ["blas", "cuda"]    # cuBLAS

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
num-traits = "0.2"

[build-dependencies]
bindgen = "0.69"
cmake = "0.1"

[[bench]]
name = "bench_gemm"
harness = false
[dependencies]
log = "0.4.21"